fix(cursor): avoid cursor display on mobile device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,3 +118,13 @@ body {
   animation: rollUp 0.3s ease-in forwards;
   overflow: hidden;
 }
+
+@media (hover: none) and (pointer: coarse) {
+  * {
+    cursor: auto !important;
+  }
+
+  .cursor-custom {
+    display: none !important;
+  }
+}
